# bpl

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCFITSIO.cmake  FindHEALPix.cmake  FindMPP.cmake  FindSHARP.cmake  set_compiler_flags.cmake
include/blackpearl/: config.hpp  version.hpp
include/blackpearl/core/: pow_spec.hpp  shc_ps_utils.hpp  shperical_data.hpp  sht.hpp  sph_data.hpp  sph_data_prec_mat_utils.hpp  sph_hrm_coeffs.hpp  sph_prec_mat.hpp  win_func.hpp  win_func_shc_utils.hpp
include/blackpearl/log_post/: balan_2016.hpp  taylor_2008.hpp  wandelt_2004.hpp
include/blackpearl/ui/: bpl.hpp
include/blackpearl/utils/: csv_io.hpp  lin_alg_utils.hpp
perf/: CMakeLists.txt  num_sph_hrm_coeffs.cpp  sht.cpp
src/: CMakeLists.txt  bpl.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  pow_spec.cpp  shc_ps_utils.cpp  shperical_data.cpp  sht.cpp  sph_data.cpp  sph_data_prec_mat_utils.cpp  sph_hrm_coeffs.cpp  sph_prec_mat.cpp  win_func.cpp
test/log_post/: CMakeLists.txt  balan_2016.cpp  taylor_2008.cpp  wandelt_2004.cpp
